# DXLib

./: CMakeLists.txt  README.md
src/ddraw/: CMakeLists.txt  ddraw.cpp  ddraw_clipper.cpp  ddraw_impl.h  ddraw_surface.cpp
src/ddraw/include/: ddraw.h
tests/: CMakeLists.txt
tests/sdl3/: CMakeLists.txt  sdl3_ddraw.c
